<resources>
    <string name="app_name">Daily Spending</string>
    <string name="new_entry">New Entry</string>
    <string name="submit">Submit</string>
    <string name="amount_hint">Amount</string>
    <string name="notes_hint">Notes</string>
    <string-array name="categories_array">
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Gas</item>
        <item>Bills</item>
        <item>Misc.</item>
    </string-array>
    <string name="category_prompt">Select Category</string>
    <string name="date_hint">Date</string>
    <string name="month_view_button">View Entire Month</string>

</resources>
