<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michellegolle.dailyspending.NewEntryForm">

    <EditText
        android:id="@+id/editNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes_hint"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="submitNewEntry"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/editNotes"
        tools:layout_editor_absoluteX="136dp" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="72dp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/editAmount"
        tools:layout_editor_absoluteX="72dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="16dp"
        android:prompt="@string/category_prompt"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />


</android.support.constraint.ConstraintLayout>
